--- a/vueudemy/src/components/practice4/template.pug
+++ b/vueudemy/src/components/practice4/template.pug
@@ -16,8 +16,8 @@
 		div(:class="['square',{'border':checkClassOne,'colored':checkClassTwo}]")
 	// 5) Repeat 3) but now with values for styles (instead of class names). Attach the respective styles.
 	div
-		input(type='text' v-model="attachValue")
-		div(:class="['square',attachValueComputed]")
+		input(type='text' v-model="mystyle.backgroundColor")
+		div(:style="mystyle" class='square')
 	// 6) Create a simple progress bar with setInterval and style bindings. Start it by hitting the below button.
 	div
 		button(v-on:click='startProgress') Start Progress
