--- a/vueudemy/src/components/practice5/template.pug
+++ b/vueudemy/src/components/practice5/template.pug
@@ -11,11 +11,11 @@
 		li(v-for="(item,index) in array") {{item}} {{index}}
 	// 3) Print all key-value pairs of the following object: {title: 'Lord of the Rings', author: 'J.R.R. Tolkiens', books: '3'}. Also print the index of each item.
 	ul
-		li(v-for="(item,key) in myObject") {{key}} - {{item}}
+		li(v-for="(item,key,index) in myObject") {{key}} - {{item}} - {{index}}
 	// 4) Print the following object (only the values) and also create a nested loop for the array: {name: 'TESTOBJECT', data: [1.67, 1.33, 0.98, 2.21]} (hint: use v-for and v-if to achieve this)
 	ul
 		li(v-for="(item,key) in testData") {{key}} -
 			span(v-if="!isArray(item)") {{item}}
-			ul(v-if="isArray(item)" v-for="(itemNested,keyNested) in item")
+			ul(v-else v-for="(itemNested,keyNested) in item")
 				li {{itemNested}}
 
